# text_cleaner

./: LICENSE  README.md  readme.md  requirements.txt  setup.cfg  text_cleaner.py
src/: text_cleaner.py
src/pytext_cleaner/: settings.py  text_cleaner.py
tests/: tests.py
