[metadata]
name = pytext-cleaner
version = 0.0.1
author = Pierre Merlet
author_email = merlet.pierre@outlook.com
description = Python library using Natural Language Processing (NLP) to easily and quickly clean text. 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PierreMrt/text_cleaner
project_urls =
    Bug Tracker = https://github.com/PierreMrt/text_cleaner/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src